--- a/swiper1/css/style1.css
+++ b/swiper1/css/style1.css
@@ -59,7 +59,7 @@ body {
 /*
  * .s1 第一屏样式 - 开始
  */
-.s1, .s2 , .s3, .s4 , .s5, .S6{
+.s1,.s2,.s3,.s4,.s5,.s6,.s7{
     background: url(../img/bj.png);
     height: 100%;
     /*设置当前的元素为相对定位*/
@@ -226,7 +226,7 @@ body {
     top: 0;
 }
 
-.s2 div {
+.s2 .s22 {
     position: absolute;
     top: 25%;
     width: 80%;
@@ -236,14 +236,14 @@ body {
 
 }
 
-.s2 div img {
+.s2 .s22 img {
     width: 100%;
     position: absolute;
     height: 100%;
     left: 0;
 }
 
-.s2 div p {
+.s2 .s22 p {
     text-align: left;
     padding-left: 10%;
     padding-right: 10%;
@@ -252,11 +252,11 @@ body {
     margin-bottom: 10px;
 }
 
-.s2 div p:nth-of-type(1) {
+.s2 .s22 p:nth-of-type(1) {
     padding-top: 20px;
 }
 
-.s2 div span {
+.s2 .s22 span {
     /*渐变色*/
     background: -moz-linear-gradient(left, #00ecfc, #00fd9d); /*Mozilla*/
     background: -webkit-gradient(linear, 0 50%, 100% 50%, from(#00ecfc), to(#00fd9d)); /*Old gradient for webkit*/
@@ -275,6 +275,52 @@ body {
     left: 50%;
     margin-left: -60px;
 }
+.s2 .footer {
+    color: #00d7b2;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    top:90%
+}
+
+.s2 .footer p:nth-of-type(2) {
+    margin-bottom: 35px;
+}
+
+.s2 .footer p:nth-of-type(3) {
+    height: 70px;
+}
+
+.s2 .footer img {
+    position: absolute;
+    height: 70px;
+}
+
+.s2 .footer img:nth-of-type(1) {
+    animation: donghuakey 2s infinite alternate;
+}
+@keyframes donghuakey
+{
+    0%{
+        left:0;
+    }
+    100%{
+        left:20px;
+    }
+}
+.s2 .footer img:nth-of-type(2) {
+    animation: donghuakey2 2s infinite alternate;
+}
+@keyframes donghuakey2
+{
+    0%{
+        left: -95px;
+    }
+    100%{
+        left:-150px;
+    }
+}
+
 #mp3Btn{
     position: absolute;
     right:5%;
@@ -412,6 +458,52 @@ body {
     left:74px;
     text-align:left;
 }
+.s3 .footer {
+    color: #00d7b2;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    top:90%
+}
+
+.s3 .footer p:nth-of-type(2) {
+    margin-bottom: 35px;
+}
+
+.s3 .footer p:nth-of-type(3) {
+    height: 70px;
+}
+
+.s3 .footer img {
+    position: absolute;
+    height: 70px;
+}
+
+.s3 .footer img:nth-of-type(1) {
+    animation: donghuakey 2s infinite alternate;
+}
+@keyframes donghuakey
+{
+    0%{
+        left:0;
+    }
+    100%{
+        left:20px;
+    }
+}
+.s3 .footer img:nth-of-type(2) {
+    animation: donghuakey2 2s infinite alternate;
+}
+@keyframes donghuakey2
+{
+    0%{
+        left: -95px;
+    }
+    100%{
+        left:-150px;
+    }
+}
+
 .s4 {
     color: #00f8ca;
 }
@@ -620,6 +712,51 @@ body {
     left:8px;
     font-size:14px;
 }
+.s4 .footer {
+    color: #00d7b2;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    top:90%
+}
+
+.s4 .footer p:nth-of-type(2) {
+    margin-bottom: 35px;
+}
+
+.s4 .footer p:nth-of-type(3) {
+    height: 70px;
+}
+
+.s4 .footer img {
+    position: absolute;
+    height: 70px;
+}
+
+.s4 .footer img:nth-of-type(1) {
+    animation: donghuakey 2s infinite alternate;
+}
+@keyframes donghuakey
+{
+    0%{
+        left:0;
+    }
+    100%{
+        left:20px;
+    }
+}
+.s4 .footer img:nth-of-type(2) {
+    animation: donghuakey2 2s infinite alternate;
+}
+@keyframes donghuakey2
+{
+    0%{
+        left: -95px;
+    }
+    100%{
+        left:-150px;
+    }
+}
 .s5 {
     color: #00f8ca;
 }
@@ -773,6 +910,51 @@ body {
     top:500px;
     left:208px;
 }
+.s5 .footer {
+    color: #00d7b2;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    top:90%
+}
+
+.s5 .footer p:nth-of-type(2) {
+    margin-bottom: 35px;
+}
+
+.s5 .footer p:nth-of-type(3) {
+    height: 70px;
+}
+
+.s5 .footer img {
+    position: absolute;
+    height: 70px;
+}
+
+.s5 .footer img:nth-of-type(1) {
+    animation: donghuakey 2s infinite alternate;
+}
+@keyframes donghuakey
+{
+    0%{
+        left:0;
+    }
+    100%{
+        left:20px;
+    }
+}
+.s5 .footer img:nth-of-type(2) {
+    animation: donghuakey2 2s infinite alternate;
+}
+@keyframes donghuakey2
+{
+    0%{
+        left: -95px;
+    }
+    100%{
+        left:-150px;
+    }
+}
 .s6 {
     color: #00f8ca;
 }
@@ -813,5 +995,354 @@ body {
     margin-top: 10px;
     top: 0;
 }
+.s6 .szz img{
+    width: 23px;
+    height: 23px;
+}
+.s6 .szz img:nth-of-type(1){
+    position: absolute;
+    top:166px;
+    left:29px;
+}
+.s6 .szz img:nth-of-type(2){
+    position: absolute;
+    top:308px;
+    left:29px;
+}
+.s6 .szz img:nth-of-type(3){
+    position: absolute;
+    top:446px;
+    left:29px;
+}
+.s6 .szz span{
+    border:1px dashed #00fcc7;
+    width: 1px;
+    height: 390px;
+    position: absolute;
+    top:190px;
+    left:39px;
+}
+.s6 .ssz img:nth-of-type(1){
+    width: 242px;
+    height: 27px;
+    position: absolute;
+    top:177px;
+    left:54px;
+}
+.s6 .ssz img:nth-of-type(2){
+    width: 242px;
+    height: 27px;
+    position: absolute;
+    top:321px;
+    left:54px;
+}
+.s6 .ssz img:nth-of-type(3){
+    width: 242px;
+    height: 27px;
+    position: absolute;
+    top:458px;
+    left:54px;
+}
+.s6 .ssz img:nth-of-type(4){
+    width: 284px;
+    height: 80px;
+    position: absolute;
+    top:216px;
+    left: 54px;
+}
+.s6 .ssz img:nth-of-type(5){
+    width: 284px;
+    height: 80px;
+    position: absolute;
+    top:359px;
+    left: 54px;
+}
+.s6 .ssz img:nth-of-type(6){
+    width: 284px;
+    height: 80px;
+    position: absolute;
+    top:497px;
+    left: 54px;
+}
+.s6 .ssz h4:nth-of-type(1){
+    position: absolute;
+    top: 182px;
+    left: 62px;
+    color:#000000;
+}
+.s6 .ssz h4:nth-of-type(2){
+    position: absolute;
+    top: 326px;
+    left: 62px;
+    color:#000000;
+}
+.s6 .ssz h4:nth-of-type(3){
+    position: absolute;
+    top: 463px;
+    left: 62px;
+    color:#000000;
+}
+.s6 p{
+    font-size:12px;
+}
+.s6 p:nth-of-type(1){
+    position: absolute;
+    top:222px;
+    left: 66px;
+}
+.s6 p:nth-of-type(2){
+    position: absolute;
+    top:242px;
+    left: 66px;
+}
+.s6 p:nth-of-type(3){
+    position: absolute;
+    top:264px;
+    left: 66px;
+}
+.s6 p:nth-of-type(4){
+    position: absolute;
+    top:366px;
+    left: 66px;
+}
+.s6 p:nth-of-type(5){
+    position: absolute;
+    top:387px;
+    left: 66px;
+}
+.s6 p:nth-of-type(6){
+    position: absolute;
+    top:409px;
+    left: 66px;
+}
+.s6 p:nth-of-type(7){
+    position: absolute;
+    top:505px;
+    left: 66px;
+}
+.s6 p:nth-of-type(8){
+    position: absolute;
+    top:525px;
+    left: 66px;
+}
+.s6 p:nth-of-type(9){
+    position: absolute;
+    top:545px;
+    left: 66px;
+}
+.s6 .footer {
+    color: #00d7b2;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    top:90%
+}
+
+.s6 .footer p:nth-of-type(2) {
+    margin-bottom: 35px;
+}
+
+.s6 .footer p:nth-of-type(3) {
+    height: 70px;
+}
+
+.s6 .footer img {
+    position: absolute;
+    height: 70px;
+}
+
+.s6 .footer img:nth-of-type(1) {
+    animation: donghuakey 2s infinite alternate;
+}
+@keyframes donghuakey
+{
+    0%{
+        left:0;
+    }
+    100%{
+        left:20px;
+    }
+}
+.s6 .footer img:nth-of-type(2) {
+    animation: donghuakey2 2s infinite alternate;
+}
+@keyframes donghuakey2
+{
+    0%{
+        left: -95px;
+    }
+    100%{
+        left:-150px;
+    }
+}
+.s7 {
+    color: #00f8ca;
+}
+
+.s7 h2 {
+    font-size: 26px;
+    position: relative;
+    top: 12%;
+}
+
+.s7 small {
+    margin-top: 10px;
+    display: block;
+    font-size: 14px;
+    letter-spacing: 5px;
+}
+
+.s7 h2::before,
+.s7 h2::after {
+    content: "";
+    width: 80px;
+    height: 20px;
+    display: inline-block;
+    position: absolute;
+}
+
+.s7 h2::before {
+    background: url(../img/14.png);
+    background-size: contain;
+    margin-left: -95px;
+    margin-top: 10px;
+}
+
+.s7 h2::after {
+    background: url(../img/13.png);
+    background-size: contain;
+    margin-left: 66px;
+    margin-top: 10px;
+    top: 0;
+}
+
+.s7 div {
+    position: absolute;
+    top: 25%;
+    width: 80%;
+    height: 55%;
+    left: 50%;
+    margin-left: -40%;
+
+}
+
+.s7 div img{
+    width: 100%;
+    position: absolute;
+    height: 100%;
+    left: 0;
+}
+.s7 input{
+    width: 260px;
+    height: 56px;
+    font-size:18px;
+}
+input::-webkit-input-placeholder { /* WebKit browsers */
+    padding-left:20px;
+}
+.s7 input:nth-of-type(1){
+    position: absolute;
+    top:202px;
+    left: 59px;
+}
+.s7 p{
+    font-size:24px;
+    color:red;
+}
+.s7 p:nth-of-type(1){
+    position:absolute ;
+    top:220px;
+    left: 68px;
+}
+.s7 p:nth-of-type(2){
+    position:absolute ;
+    top:286px;
+    left: 68px;
+}
+.s7 p:nth-of-type(3){
+    position:absolute ;
+    top:355px;
+    left: 68px;
+}
+.s7 input:nth-of-type(2){
+    position: absolute;
+    top:269px;
+    left: 59px;
+}
+.s7 input:nth-of-type(3){
+    position: absolute;
+    top:337px;
+    left: 59px;
+}
+.s7 button{
+    width:260px;
+    height: 61px;
+    background-color:#00f2ca;
+    color:#ffffff;
+    position: absolute;
+    top:406px;
+    left: 59px;
+}
+.s7 .wen{
+    width: 260px;
+}
+.s7 .wen h5:nth-of-type(1){
+    position: absolute;
+    top:312px;
+    left: 50px;
+}
+.s7 .wen h5:nth-of-type(2){
+    position: absolute;
+    top:328px;
+    left: 56px;
+}
+.s6 .footer {
+    color: #00d7b2;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    top:90%
+}
+
+.s6 .footer p:nth-of-type(2) {
+    margin-bottom: 35px;
+}
+
+.s6 .footer p:nth-of-type(3) {
+    height: 70px;
+}
+
+.s6 .footer img {
+    position: absolute;
+    height: 70px;
+}
+
+.s6 .footer img:nth-of-type(1) {
+    animation: donghuakey 2s infinite alternate;
+}
+@keyframes donghuakey
+{
+    0%{
+        left:0;
+    }
+    100%{
+        left:20px;
+    }
+}
+.s7 .footer img:nth-of-type(2) {
+    animation: donghuakey2 2s infinite alternate;
+}
+@keyframes donghuakey2
+{
+    0%{
+        left: -95px;
+    }
+    100%{
+        left:-150px;
+    }
+}
+
+
+
 
 
