--- a/swiper1/css/style1.css
+++ b/swiper1/css/style1.css
@@ -553,30 +553,30 @@ body {
     margin-left: -40%;
 
 }
-.s4 img{
+.s4  .ooo img{
     width: 100%;
     position: absolute;
     height: 100%;
     left: 0;
 }
-.s4 img:nth-of-type(2){
+.s4 .ooo img:nth-of-type(2){
     width: 30px;
     height: 30px;
     top:3px;
     left:33px;
 }
-.s4 img:nth-of-type(3){
+.s4 .ooo img:nth-of-type(3){
     width: 30px;
     height: 30px;
     top:3px;
     left:164px;
 }
-.s4 p:nth-of-type(1){
+.s4 .ooo p:nth-of-type(1){
     position: absolute;
     top:6px;
     left:62px;
 }
-.s4 p:nth-of-type(2){
+.s4 .ooo p:nth-of-type(2){
     position: absolute;
     top:6px;
     left:193px;
@@ -708,11 +708,11 @@ body {
 }
 .s4 .wenzi p{
     position: absolute;
-    top:289px;
+    top:194px;
     left:8px;
     font-size:14px;
 }
-.s4 .footer {
+.s4 .footer{
     color: #00d7b2;
     position: absolute;
     width: 100%;
@@ -720,11 +720,11 @@ body {
     top:90%
 }
 
-.s4 .footer p:nth-of-type(2) {
+.s4 .footer p:nth-of-type(1) {
     margin-bottom: 35px;
 }
 
-.s4 .footer p:nth-of-type(3) {
+.s4 .footer p:nth-of-type(2) {
     height: 70px;
 }
 
@@ -797,81 +797,81 @@ body {
     margin-top: 10px;
     top: 0;
 }
-.s5 img:nth-of-type(1){
+.s5 .mmm img:nth-of-type(1){
     width: 140px;
     height: 176px;
     position: absolute;
     top:166px;
     left: 44px;
 }
-.s5 img:nth-of-type(2){
+.s5 .mmm img:nth-of-type(2){
     width: 140px;
     height: 176px;
     position: absolute;
     top:166px;
     left:191px;
 }
-.s5 img:nth-of-type(3){
+.s5 .mmm img:nth-of-type(3){
     width: 140px;
     height: 176px;
     position: absolute;
     top:363px;
     left:44px;
 }
-.s5 img:nth-of-type(4){
+.s5 .mmm img:nth-of-type(4){
     width: 140px;
     height: 176px;
     position: absolute;
     top:363px;
     left:191px;
 }
-.s5 img:nth-of-type(5){
+.s5 .mmm img:nth-of-type(5){
     width: 100px;
     height: 107px;
     position: absolute;
     top:170px;
     left:65px;
 }
-.s5 img:nth-of-type(6){
+.s5 .mmm img:nth-of-type(6){
     width: 100px;
     height: 107px;
     position: absolute;
     top:170px;
     left:212px;
 }
-.s5 img:nth-of-type(7){
+.s5 .mmm img:nth-of-type(7){
     width: 100px;
     height: 107px;
     position: absolute;
     top:366px;
     left:65px;
 }
-.s5 img:nth-of-type(8){
+.s5 .mmm img:nth-of-type(8){
     width: 100px;
     height: 107px;
     position: absolute;
     top:366px;
     left:212px;
 }
-.s5 p{
+.s5 .mmm p{
     font-size:12px;
 }
-.s5 p:nth-of-type(1){
+.s5 .mmm p:nth-of-type(1){
     position: absolute;
     top:278px;
     left:72px;
 }
-.s5 p:nth-of-type(2){
+.s5 .mmm p:nth-of-type(2){
     position: absolute;
     top:278px;
     left:222px;
 }
-.s5 p:nth-of-type(3){
+.s5 .mmm p:nth-of-type(3){
     position: absolute;
     top:474px;
     left:72px;
 }
-.s5 p:nth-of-type(4){
+.s5 .mmm p:nth-of-type(4){
     position: absolute;
     top:474px;
     left:222px;
@@ -1082,50 +1082,50 @@ body {
     left: 62px;
     color:#000000;
 }
-.s6 p{
+.s6 .ssz p{
     font-size:12px;
 }
-.s6 p:nth-of-type(1){
+.s6 .ssz p:nth-of-type(1){
     position: absolute;
     top:222px;
     left: 66px;
 }
-.s6 p:nth-of-type(2){
+.s6 .ssz p:nth-of-type(2){
     position: absolute;
     top:242px;
     left: 66px;
 }
-.s6 p:nth-of-type(3){
+.s6 .ssz p:nth-of-type(3){
     position: absolute;
     top:264px;
     left: 66px;
 }
-.s6 p:nth-of-type(4){
+.s6 .ssz p:nth-of-type(4){
     position: absolute;
     top:366px;
     left: 66px;
 }
-.s6 p:nth-of-type(5){
+.s6 .ssz p:nth-of-type(5){
     position: absolute;
     top:387px;
     left: 66px;
 }
-.s6 p:nth-of-type(6){
+.s6 .ssz p:nth-of-type(6){
     position: absolute;
     top:409px;
     left: 66px;
 }
-.s6 p:nth-of-type(7){
+.s6 .ssz p:nth-of-type(7){
     position: absolute;
     top:505px;
     left: 66px;
 }
-.s6 p:nth-of-type(8){
+.s6 .ssz p:nth-of-type(8){
     position: absolute;
     top:525px;
     left: 66px;
 }
-.s6 p:nth-of-type(9){
+.s6 .ssz p:nth-of-type(9){
     position: absolute;
     top:545px;
     left: 66px;
@@ -1216,7 +1216,7 @@ body {
     top: 0;
 }
 
-.s7 div {
+.s7 .zml {
     position: absolute;
     top: 25%;
     width: 80%;
@@ -1226,7 +1226,7 @@ body {
 
 }
 
-.s7 div img{
+.s7 .zml img{
     width: 100%;
     position: absolute;
     height: 100%;
@@ -1245,21 +1245,21 @@ input::-webkit-input-placeholder { /* WebKit browsers */
     top:202px;
     left: 59px;
 }
-.s7 p{
+.s7 .nnn p{
     font-size:24px;
     color:red;
 }
-.s7 p:nth-of-type(1){
+.s7 .nnn p:nth-of-type(1){
     position:absolute ;
     top:220px;
     left: 68px;
 }
-.s7 p:nth-of-type(2){
+.s7 .nnn p:nth-of-type(2){
     position:absolute ;
     top:286px;
     left: 68px;
 }
-.s7 p:nth-of-type(3){
+.s7 .nnn p:nth-of-type(3){
     position:absolute ;
     top:355px;
     left: 68px;
@@ -1288,15 +1288,15 @@ input::-webkit-input-placeholder { /* WebKit browsers */
 }
 .s7 .wen h5:nth-of-type(1){
     position: absolute;
-    top:312px;
-    left: 50px;
+    top:475px;
+    left: 87px;
 }
 .s7 .wen h5:nth-of-type(2){
     position: absolute;
-    top:328px;
-    left: 56px;
+    top:492px;
+    left: 93px;
 }
-.s6 .footer {
+.s7 .footer {
     color: #00d7b2;
     position: absolute;
     width: 100%;
@@ -1304,20 +1304,20 @@ input::-webkit-input-placeholder { /* WebKit browsers */
     top:90%
 }
 
-.s6 .footer p:nth-of-type(2) {
+.s7 .footer p:nth-of-type(2) {
     margin-bottom: 35px;
 }
 
-.s6 .footer p:nth-of-type(3) {
+.s7 .footer p:nth-of-type(3) {
     height: 70px;
 }
 
-.s6 .footer img {
+.s7 .footer img {
     position: absolute;
     height: 70px;
 }
 
-.s6 .footer img:nth-of-type(1) {
+.s7 .footer img:nth-of-type(1) {
     animation: donghuakey 2s infinite alternate;
 }
 @keyframes donghuakey
