--- a/双选会/css/style.css
+++ b/双选会/css/style.css
@@ -132,3 +132,232 @@ body {
     top: 63%;
     left:13%
 }
+.s3{
+    background: url("../img/bg6.jpg");
+    background-size: 100% 100%;
+    position: relative;
+    height: 100%;
+}
+.s3 img:nth-of-type(1){
+    width: 92%;
+    height: 24%;
+    position: absolute;
+    top: 78%;
+    left: 12%;
+}
+.s3 p{
+    width: 50%;
+    text-align:left;
+    position: absolute;
+    left: 5%;
+    top:4%;
+}
+.s3 h1{
+    width: 20px;
+    position: absolute;
+    top: 8%;
+    left: 80%;
+}
+.s3 img:nth-of-type(2){
+    position: absolute;
+    top: 49%;
+    left: 3%;
+}
+.s4{
+    background: url("../img/bg5.jpg");
+    background-size: 100% 100%;
+    position: relative;
+    height: 100%;
+}
+.s4 .wenzi1 p{
+    font-size:28px;
+    font-weight: bolder;
+}
+.s4 .wenzi1 p:nth-of-type(1){
+    position: absolute;
+    top: 10%;
+    left: 10%;
+}
+.s4 .wenzi1 p:nth-of-type(2){
+    position: absolute;
+    top: 10%;
+    left: 25%;
+}
+.s4 .wenzi1 p:nth-of-type(3){
+    position: absolute;
+    top: 10%;
+    left: 40%;
+}
+.s4 .wenzi1 p:nth-of-type(4){
+    position: absolute;
+    top: 10%;
+    left: 55%;
+}
+.s4 .tupian{
+    width: 50%;
+    height: 30%;
+    position: absolute;
+    top: 71%;
+    left: 20%;
+    animation: donghuakey 4s infinite alternate;
+}
+@keyframes donghuakey
+{
+    0%{
+        left:200px;
+    }
+    100%{
+        left:90px;
+    }
+}
+.s4 .header p{
+    font-size:14px;
+}
+.s4 .header p:nth-of-type(1){
+    position: absolute;
+    top: 21%;
+    left: 5%;
+}
+.s4 .header p:nth-of-type(2){
+    position: absolute;
+    top: 33%;
+    left: 5%;
+}
+.s4 .header p:nth-of-type(3){
+    position: absolute;
+    top: 45%;
+    left: 5%;
+}
+.s4 .header p:nth-of-type(4){
+    position: absolute;
+    top: 21%;
+    left: 55%;
+}
+.s4 .header p:nth-of-type(5){
+    position: absolute;
+    top: 33%;
+    left: 55%;
+}
+.s4 .header p:nth-of-type(6){
+    position: absolute;
+    top: 45%;
+    left: 55%;
+}
+.s4 .header p:nth-of-type(7){
+    position: absolute;
+    top: 54%;
+    left: 55%;
+}
+.s4 .header img:nth-of-type(1){
+    width: 20%;
+    height: 10%;
+    position: absolute;
+    top: 19%;
+    left: 31%;
+}
+.s4 .header img:nth-of-type(2){
+    width: 20%;
+    height: 10%;
+    position: absolute;
+    top: 31%;
+    left: 31%;
+}
+.s4 .header img:nth-of-type(3){
+    width: 20%;
+    height: 10%;
+    position: absolute;
+    top: 44%;
+    left: 31%;
+}
+.s5{
+    background: url("../img/bg10.jpg");
+    background-size: 100% 100%;
+    position: relative;
+    height: 100%;
+}
+.s5 h3{
+    font-size:32px;
+    position: absolute;
+    top:10%;
+    left: 36%;
+}
+.s5 input{
+    width: 260px;
+    height: 56px;
+    font-size:18px;
+    border:1px solid #000000;
+}
+input::-webkit-input-placeholder { /* WebKit browsers */
+    padding-left:20px;
+}
+.s5 input:nth-of-type(1){
+    position: absolute;
+    top:202px;
+    left: 59px;
+}
+.s5 .nnn p{
+    font-size:24px;
+    color:red;
+}
+.s5 .nnn p:nth-of-type(1){
+    position:absolute ;
+    top:220px;
+    left: 68px;
+}
+.s5 .nnn p:nth-of-type(2){
+    position:absolute ;
+    top:286px;
+    left: 68px;
+}
+.s5 .nnn p:nth-of-type(3){
+    position:absolute ;
+    top:355px;
+    left: 68px;
+}
+.s5 input:nth-of-type(2){
+    position: absolute;
+    top:269px;
+    left: 59px;
+}
+.s5 input:nth-of-type(3){
+    position: absolute;
+    top:337px;
+    left: 59px;
+}
+.s5 button{
+    width:260px;
+    height: 61px;
+    background-color:#00f2ca;
+    color:#ffffff;
+    position: absolute;
+    top:406px;
+    left: 59px;
+}
+#mp3Btn{
+    position: absolute;
+    right:5%;
+    top:5%;
+    z-index: 100;
+    width: 20px;
+    height: 30px;
+    background: rgba(0,0,0,0.1);
+    border-radius: 50%;
+    border:4px solid #292929;
+    text-align: center;
+    line-height: 28px;
+    transform: rotateZ(0deg);
+    animation: mp3key 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-play-state: running;
+}
+@keyframes mp3key {
+    from{
+        transform: rotateZ(0deg);
+    }to{
+         transform: rotateZ(1turn);
+     }
+}
+#mp3Btn img{
+    width: 10px;
+}
