--- a/oppo/css/style2.css
+++ b/oppo/css/style2.css
@@ -197,47 +197,145 @@ nav h2{
 .main .m3 .sh2{
     width: 160px;
     height: 44px;
-    border:1px solid #98979a;
+    border:1px solid greenyellow;
     margin-left:-18px;
+    margin-bottom:15px;
 }
 .main .m3 span{
-    margin-left:12px;
-    margin-top:15px;
+    display: block;
+    margin-left:56px;
+    margin-top:10px;
 }
 .main .m4 .sh2{
     width: 160px;
     height: 44px;
-    border:1px solid #98979a;
+    border:1px solid greenyellow;
     margin-left:-18px;
+    margin-bottom:15px;
+}
+.main .m4 span{
+    display: block;
+    margin-left:51px;
+    margin-top:10px;
 }
 .main .m5 .sh2{
     width: 160px;
     height: 44px;
     border:1px solid #98979a;
     margin-left:-18px;
+    margin-bottom:15px;
+}
+.main .m5 span{
+    display: block;
+    margin-left:30px;
+    margin-top:10px;
 }
 .main .main1  .row .m1 p img{
     width: 12px;
     height: 12px;
 }
-.footer .container h2{
-    margin-top:10px;
-    font-size:25px;
-}
-.footer .container .col-xs-6 img{
-    margin-left:19px;
-}
-.footer .xian{
+.main .main1 .row .m7 .col-xs-12:nth-of-type(1){
+    background: url(../img/hou1.jpg)no-repeat center;
+    background-size: cover;
     position: relative;
-    width: 95%;
-    left: 3%;
-    top:77px;
-    border-bottom:1px solid #98979a;
+    height: 400px;
+
 }
-.footer .col-xs-12{
-    line-height: 25px;
-    color:#98979a;
+.main .main1 .row .m7 .col-xs-12:nth-of-type(2){
+    background: url(../img/hou2.jpg)no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 552px;
+
 }
-.footer .col-xs-12 img{
-    margin-top:-8px;
+.main .main1 .row .m7 .col-xs-12:nth-of-type(3){
+    background: url(../img/hou3.jpg)no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 632px;
+
+}
+.main .main1 .row .m7 .col-xs-12:nth-of-type(4){
+    background: url(../img/hou4.jpg)no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 460px;
+
+}
+.main .main1 .row .m7 .col-xs-12:nth-of-type(5){
+    background: url(../img/hou5.jpg)no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 460px;
+
+}
+.main .main1 .row .m7 .col-xs-12:nth-of-type(6){
+    background: url(../img/hou6.jpg)no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 400px;
+
+}
+.main .main1 .row .m7 .col-xs-12:nth-of-type(7){
+    background: url(../img/hou7.jpg)no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 531px;
+
+}
+.main .main1 .row .m7 .col-xs-12:nth-of-type(8){
+    background: url(../img/hou8.jpg)no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 485px;
+
+}
+.main .main1 .row .m7 .col-xs-12:nth-of-type(9){
+    background: url(../img/hou9.jpg)no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 485px;
+
+}
+.main .main1 .row .m7 .col-xs-12:nth-of-type(10){
+    background: url(../img/hou10.jpg)no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 356px;
+
+}
+.main .main1 .row .m7 .col-xs-12:nth-of-type(11){
+    background: url(../img/hou11.jpg)no-repeat center;
+    background-size: cover;
+    position: relative;
+    height: 234px;
+}
+.footer{
+    margin-top:20px;
+}
+.footer .col-xs-12 .col-xs-6:nth-of-type(2) p{
+    float: right;
+}
+.footer .col-xs-12:nth-of-type(2) .col-xs-6:nth-of-type(1) img{
+    width: 20px;
+    height: 20px;
+    float:left;
+}
+.footer .col-xs-12:nth-of-type(2) .col-xs-6:nth-of-type(1) p{
+    float:right;
+    margin-right:43px;
+}
+.footer .col-xs-12:nth-of-type(2) .col-xs-6:nth-of-type(2) img{
+    float:right;
+}
+.footer .col-xs-12 .col-xs-8 p{
+    font-size:12px;
+}
+.footer .kongbai{
+    width: 100%;
+    height: 50px;
+}
+.navbar .container .row .col-xs-5 a p{
+    text-align:center;
+    margin-top:14px;
 }
